fix(user): solve CORS port restrictions and sync user profile points
- backend: support multi-origin local frontend ports in CORS config
- frontend: optimize milestone condition in TravelInsightWidget (points >= 100)
- frontend: establish real-time refetch triggers on focus & mount in Home, MyPage, and ProfileTab
- frontend: integrate ProfileTab with UserContext for single source of truth

Co-Authored-By: First Fluke <our.first.fluke@gmail.com>